handle plural issues (jhipster does not singular-ize the entity name)

--- a/generators/app/templates/app/modules/login/login-screen.oauth2.js.ejs
+++ b/generators/app/templates/app/modules/login/login-screen.oauth2.js.ejs
@@ -1,5 +1,5 @@
 import React from 'react';
-import { Button, Text, View } from 'react-native';
+import { Button, Text } from 'react-native';
 import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view';
 import { connect } from 'react-redux';
 
