--- a/generators/app/templates/app/shared/sagas/user.sagas.js.ejs
+++ b/generators/app/templates/app/shared/sagas/user.sagas.js.ejs
@@ -2,7 +2,7 @@ import { call, put } from 'redux-saga/effects'
 import UserActions from '../reducers/user.reducer'
 import { callApi } from './call-api.saga'
 
-export function * getUser (api, action) {
+function * getUser (api, action) {
   const { userId } = action
   // make the call to the api
   const apiCall = call(api.getUser, userId)
@@ -16,10 +16,10 @@ export function * getUser (api, action) {
   }
 }
 
-export function * getUsers (api, action) {
+function * getAllUsers (api, action) {
   const { options } = action
   // make the call to the api
-  const apiCall = call(api.getUsers, options)
+  const apiCall = call(api.getAllUsers, options)
   const response = yield call(callApi, apiCall)
 
   // success?
@@ -30,7 +30,7 @@ export function * getUsers (api, action) {
   }
 }
 
-export function * updateUser (api, action) {
+function * updateUser (api, action) {
   const { user } = action
   // make the call to the api
   const idIsNotNull = !!user.id
@@ -45,7 +45,7 @@ export function * updateUser (api, action) {
   }
 }
 
-export function * deleteUser (api, action) {
+function * deleteUser (api, action) {
   const { userId } = action
   // make the call to the api
   const apiCall = call(api.deleteUser, userId)
@@ -58,3 +58,10 @@ export function * deleteUser (api, action) {
     yield put(UserActions.userDeleteFailure(response.data))
   }
 }
+
+export default {
+  getUser,
+  getAllUsers,
+  deleteUser,
+  updateUser,
+};
