--- a/generators/app/templates/app/shared/services/fixture-api.js.ejs
+++ b/generators/app/templates/app/shared/services/fixture-api.js.ejs
@@ -11,7 +11,7 @@ export default {
       data: require('../fixtures/update-user.json')
     }
   },
-  getUsers: () => {
+  getAllUsers: () => {
     return {
       ok: true,
       data: require('../fixtures/get-users.json')
