--- a/generators/app/templates/test/spec/shared/sagas/user.saga.spec.js.ejs
+++ b/generators/app/templates/test/spec/shared/sagas/user.saga.spec.js.ejs
@@ -1,7 +1,9 @@
 import FixtureAPI from '../../../../app/shared/services/fixture-api'
 import { put } from 'redux-saga/effects'
-import { getUser, getUsers, updateUser, deleteUser } from '../../../../app/shared/sagas/user.sagas'
+import UserSagas from '../../../../app/shared/sagas/user.sagas'
 import UserActions from '../../../../app/shared/reducers/user.reducer'
+
+const { getUser, getAllUsers, updateUser, deleteUser } = UserSagas;
 
 const stepper = (fn) => (mock) => fn.next(mock).value
 
@@ -24,8 +26,8 @@ test('get failure path', () => {
 })
 
 test('getAll success path', () => {
-  const response = FixtureAPI.getUsers()
-  const step = stepper(getUsers(FixtureAPI, { options: { page: 0, sort: 'id,asc', size: 20 } }))
+  const response = FixtureAPI.getAllUsers()
+  const step = stepper(getAllUsers(FixtureAPI, { options: { page: 0, sort: 'id,asc', size: 20 } }))
   // Step 1: Hit the api
   step()
   // Step 2: Successful return and data!
@@ -34,7 +36,7 @@ test('getAll success path', () => {
 
 test('getAll failure path', () => {
   const response = { ok: false }
-  const step = stepper(getUsers(FixtureAPI, { options: { page: 0, sort: 'id,asc', size: 20 } }))
+  const step = stepper(getAllUsers(FixtureAPI, { options: { page: 0, sort: 'id,asc', size: 20 } }))
   // Step 1: Hit the api
   step()
   // Step 2: Failed response.
