--- a/generators/entity/templates/entity-sagas.spec.js.ejs
+++ b/generators/entity/templates/entity-sagas.spec.js.ejs
@@ -1,9 +1,10 @@
 import { put } from 'redux-saga/effects'
 
 import FixtureAPI from '../../../../../app/shared/services/fixture-api'
-import { get<%= context.entityNameCapitalized %>, get<%= context.entityNamePlural %>, update<%= context.entityNameCapitalized %>, delete<%= context.entityNameCapitalized %><%= context.searchEngine ? `, search${context.entityNamePlural}` : '' %> } from '../../../../../app/modules/entities/<%= context.entityFileName %>/<%= context.entityFileName %>.sagas'
+import <%= context.entityNameCapitalized %>Sagas from '../../../../../app/modules/entities/<%= context.entityFileName %>/<%= context.entityFileName %>.sagas'
 import <%= context.entityNameCapitalized %>Actions from '../../../../../app/modules/entities/<%= context.entityFileName %>/<%= context.entityFileName %>.reducer'
 
+const { get<%= context.entityNameCapitalized %>, getAll<%= context.entityNamePlural %>, update<%= context.entityNameCapitalized %>, delete<%= context.entityNameCapitalized %><%= context.searchEngine ? `, search${context.entityNamePlural}` : '' %> } = <%= context.entityNameCapitalized %>Sagas;
 const stepper = (fn) => (mock) => fn.next(mock).value
 
 test('get success path', () => {
@@ -25,8 +26,8 @@ test('get failure path', () => {
 })
 
 test('getAll success path', () => {
-  const response = FixtureAPI.get<%= context.entityNamePlural %>()
-  const step = stepper(get<%= context.entityNamePlural %>(FixtureAPI, { options: { page: 0, sort: 'id,asc', size: 20 } }))
+  const response = FixtureAPI.getAll<%= context.entityNamePlural %>()
+  const step = stepper(getAll<%= context.entityNamePlural %>(FixtureAPI, { options: { page: 0, sort: 'id,asc', size: 20 } }))
   // Step 1: Hit the api
   step()
   // Step 2: Successful return and data!
@@ -35,7 +36,7 @@ test('getAll success path', () => {
 
 test('getAll failure path', () => {
   const response = { ok: false }
-  const step = stepper(get<%= context.entityNamePlural %>(FixtureAPI, { options: { page: 0, sort: 'id,asc', size: 20 } }))
+  const step = stepper(getAll<%= context.entityNamePlural %>(FixtureAPI, { options: { page: 0, sort: 'id,asc', size: 20 } }))
   // Step 1: Hit the api
   step()
   // Step 2: Failed response.
