--- a/generators/app/templates/app/shared/components/form/inputs/jhi-date-input.js.ejs
+++ b/generators/app/templates/app/shared/components/form/inputs/jhi-date-input.js.ejs
@@ -30,8 +30,7 @@ export default React.forwardRef((props, ref) => {
     <View style={styles.container}>
       {/* if there's a label, render it */}
       {label && <Text style={[styles.label, labelStyle]}>{label}</Text>}
-      {/* render the text input */}
-
+      {/* render the date picker */}
       <TouchableOpacity onPress={toggleDatePickerButton}>
         <View pointerEvents="none">
           <TextInput editable={false} style={styles.input} value={displayValue} testID={testID} />
