--- a/generators/app/templates/app/shared/components/form/inputs/jhi-list-input.js.ejs
+++ b/generators/app/templates/app/shared/components/form/inputs/jhi-list-input.js.ejs
@@ -4,22 +4,31 @@ import RNPickerSelect from 'react-native-picker-select';
 import { Fonts } from '../../../themes';
 
 export default React.forwardRef((props, ref) => {
-  const { label, labelStyle, error, listItems = [], placeholder, testID, ...otherProps } = props;
+  const { label, labelStyle, error, listItems = [], placeholder, listItemLabelField, testID, ...otherProps } = props;
   const actualPlaceholder = {
     label: placeholder ? placeholder : 'Select an item...',
     value: '',
     color: 'black',
   };
 
+  // map the list items to the expected Picker format
+  const mapListItems = () => {
+    return listItems.map((listItem) => {
+      const itemLabel = listItem[listItemLabelField] || listItem.label || listItem.id || '';
+      const value = listItem.value || listItem.id || '';
+      const itemKey = listItem.itemKey || listItem.id || '';
+      return { label: itemLabel, value, itemKey };
+    });
+  };
+
   return (
     <View style={styles.container}>
       {/* if there's a label, render it */}
       {label && <Text style={[styles.label, labelStyle]}>{label}</Text>}
-      {/* render the text input */}
-
+      {/* render the picker */}
       <RNPickerSelect
         placeholder={actualPlaceholder}
-        items={listItems}
+        items={mapListItems(listItems)}
         style={pickerStyles}
         ref={ref}
         touchableWrapperProps={{ testID }}
